--- a/assets/scss/_faq-section.scss
+++ b/assets/scss/_faq-section.scss
@@ -2,7 +2,7 @@
 
 #faq {
   img {
-    max-width: 80%;
+    margin-bottom: 1rem;
     border-radius: variables.$custome-borderradius;
     box-shadow: variables.$card-shadow;
   }
