--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -4,12 +4,13 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw; // Use 100vw instead of 100%
+  width: 100vw;
   z-index: 1030;
   background-color: vars.$transparent-color;
   transition: background-color 0.3s ease-in-out;
 
   &.scrolled {
+    width: 100vw;
     background-color: vars.$secondary-color;
   }
 
@@ -31,7 +32,6 @@
     background-color: transparent; // Default state
     transition: all 0.2s ease; // Smooth transition for hover effects
     border-radius: 4px; // Optional rounded corners
-
     // Hover state for both normal and expanded states
     &:hover {
       background-color: rgba(230, 126, 34, 0.1);
@@ -76,7 +76,7 @@
   }
 
   .navbar-collapse {
-    max-width: 100vw; // Constrain to viewport width
+    max-width: 100%; // Constrain to viewport width
     overflow-x: hidden; // Hide horizontal overflow
     &.show {
       margin-top: -1rem;
